[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
solana-client = "1.9.0"
secp256k1 = "0.24.0"
rand = "0.8.5"
solana-program = "1.17.9"

# [lib]
# crate-type = ["cdylib", "rlib"]

# [profile.release]
# lto = true